Add graaljs based job processor